# Market-Forecaster

./: README.md  app.py  pyproject.toml  replit.md  requirements.txt
.local/skills/artifacts/: .fingerprint
.local/skills/deployment/: .fingerprint
.local/skills/mockup-extract/: .fingerprint
.local/skills/mockup-graduate/: .fingerprint
.local/skills/mockup-sandbox/: .fingerprint
.local/skills/revenuecat/: .fingerprint
.local/skills/streamlit/: .fingerprint
.local/skills/stripe/: .fingerprint
.local/skills/workflows/: .fingerprint
.local/state/replit/: log-query.db-shm  log-query.db-wal
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/F5GwDsK_x_gwm3WrKEmSK/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/MjgpnDcpiJcqRFTTriMck/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/YpfC3QErStOU8gRHnuise/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/bki5xcKRL_Pq5GnZ1txEc/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/hNcOJjF9psv9M2KqH1dmV/: metadata.json  start_application.shell.exec.0
.local/state/workflow-logs/sU-AhR-qRVk-OjDKckHGQ/: metadata.json
.local/state/workflow-logs/t5T1WVGrWZbcAUAzMMAI-/: metadata.json  start_application.shell.exec.0
attached_assets/: Pasted-Build-a-complete-Python-web-app-called-TekCorp-Forecast_1767704061171.txt
services/: __init__.py  backtest.py  data.py  indicators.py  models_arima.py  models_dl.py  models_prophet.py  signals.py
